
project(TestFun)

include_directories(
  ${CMAKE_CURRENT_SOURCE_DIR}/fun
)

message(WARNING ${CMAKE_CURRENT_SOURCE_DIR})
message(WARNING ${CMAKE_SOURCE_DIR})

#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
set(SRC_LIST
    ./fun.cpp
	)
ADD_LIBRARY(fun SHARED ${SRC_LIST})
#ADD_LIBRARY(fun ${SRC_LIST})

